<resources>
    <string name="app_name">Mood Tracker</string>
    <string name="app_notification">Moral du jour</string>
    <string name="notification_title">Add your mood</string>

    <string name="add_new_mood_description">Add New Mood Button</string>

    <string name="welcome_text">Time Line</string>
    <string name="main_row_filter_title">Aujourd\'hui</string>
    <string name="main_row_feelings">Emotion</string>
    <string name="main_row_activities">Activitées</string>
    <string name="main_settings">Paramètres</string>
    <string name="return_to_main">Return</string>

    <string name="mood_picker_date_title">Date</string>
    <string name="mood_picker_date_value">04/10/2022</string>
    <string name="mood_picker_time_title">Heure</string>
    <string name="mood_picker_time_value">08h30</string>
    <string name="mood_picker_mood_title">Moral</string>
    <string name="mood_picker_fatigue_title">Fatigue</string>
    <string name="mood_picker_mood_value">3</string>

    <string name="front_mood_title">Moral du jour</string>
    <string name="front_sleep_title">Fatigue du jour</string>
    <string name="front_ritaline_title">Did you take your ritaline?</string>

    <string name="confirm_change">Confirmer</string>
    <string name="remove">Remove</string>
    <string name="add">Ajouter</string>
    <string name="cancel">Annuler</string>
    <string name="create">Créer</string>

    <string name="default_date">04/10/2022</string>
    <string name="default_time">12h01</string>
    <string name="default_mood">5</string>
    <string name="default_fatigue">5</string>

    <string name="trend_reset">Reset</string>
    <string name="trend_check_mood">Moral</string>
    <string name="trend_check_fatigue">Fatigue</string>
    <string name="trend_check_ritaline">Ritaline</string>
    <string name="trend_check_moy">Moyenne</string>
    <string name="trend_month">Mois</string>
    <string name="trend_year">Année</string>
    <string name="trend_title">Évolution</string>

    <string name="activities_choose">Activitées du jour</string>
    <string name="activities_selected">Sélectionnés</string>
    <string name="activities_available">Possible</string>
    <string name="activities_name">Activitée</string>
    <string name="activities_delete">Supprimer</string>
    <string name="activities_cross">X</string>
    <string name="activities_add_new">Ajouter des activitées</string>
    <string name="activities_add_new_description">Clickable button to add new activity</string>
    <string name="activities_enable_delete">Supprimer</string>
    <string name="activities_add_new_activity_name_hint">Enter in a new activity name of your choosing</string>
    <string name="activities_restore_defaults">Par défaut</string>

    <string name="feelings_welcome">Émotions du jour</string>
    <string name="feelings_selected">Sélectionnés</string>
    <string name="feelings_available">Possible</string>
    <string name="feelings_name">Émotions</string>
    <string name="feelings_delete">Supprimer</string>
    <string name="feelings_cross">X</string>
    <string name="feelings_add_new">Ajouter des émotions</string>
    <string name="feelings_add_new_description">Clickable button to add new feeling</string>
    <string name="feelings_enable_delete">Supprimer</string>
    <string name="feelings_add_new_activity_name_hint">Record a new feeling</string>
    <string name="feelings_restore_defaults">Par défaut</string>

    <string name="note_title">Note du\ </string>

    <string name="settings_title">Paramètres</string>
    <string name="settings_mood_display">Mood Options</string>
    <string name="settings_mood_use_numerals">Utiliser des nombres</string>
    <string name="settings_import">Importer un fichier JSON</string>
    <string name="settings_import_csv">Importer un fichier CSV</string>
    <string name="settings_export">Exporter un fichier JSON</string>
    <string name="settings_export_csv">Exporter un fichier CSV</string>
    <string name="settings_reminder">Rappel</string>
    <string name="settings_reminder_time">Rappel à</string>
    <string name="settings_reminder_time_forget">Rappel en cas d\'oubli à</string>
    <string name="settings_medication_name">Medicament surveillé :\ </string>
    <string name="settings_tracker_name">Tracker :\ </string>
    <string name="settings_tracker_none">aucun</string>
    <string name="settings_mode_note">Mode note</string>
    <string name="settings_max_mood">Échelle notation :\ </string>
    <string name="settings_tracker_title">Trackers</string>

    <dimen name="text_size_xxlarge">30sp</dimen>
    <dimen name="text_size_xlarge">26sp</dimen>
    <dimen name="text_size_large">22sp</dimen>
    <dimen name="text_size_medium">18sp</dimen>
    <dimen name="text_size_small">14sp</dimen>
    <dimen name="text_size_search">14sp</dimen>
    <dimen name="choose_mood_circle_size">50dp</dimen>
    <dimen name="choose_mood_circle_size_10">50dp</dimen>
    <dimen name="choose_mood_circle_margin">5dp</dimen>
    <dimen name="choose_fatigue_circle_size">50sp</dimen>
    <dimen name="choose_fatigue_circle_size_10">50sp</dimen>
    <dimen name="choose_fatigue_circle_margin">5dp</dimen>
    <dimen name="choose_high_tab">48dp</dimen>

    <string-array name="max_mood">
        <item>1 à 5</item>
        // terrible
        <item>1 à 9</item>
    </string-array>

    <string-array name="mood_faces">
        <item>&#128557;</item>
        // terrible
        <item>&#128577;</item>
        // unhappy
        <item>&#128528;</item>
        // average
        <item>&#128512;</item>
        // happy
        <item>&#128513;</item>
        // ecstatic
    </string-array>

    <string-array name="fatigue_faces">
        <item>&#128557;</item>
        // terrible
        <item>&#128577;</item>
        // unhappy
        <item>&#128528;</item>
        // average
        <item>&#128512;</item>
        // happy
        <item>&#128513;</item>
        // ecstatic
    </string-array>

    <string name="mood_ecstatic">&#128513;</string>
    <string name="mood_happy">&#128512;</string>
    <string name="mood_average">&#128528;</string>
    <string name="mood_unhappy">&#128577;</string>
    <string name="mood_terrible">&#128557;</string>
    <string name="fatigue_ecstatic">&#128513;</string>
    <string name="fatigue_happy">&#128512;</string>
    <string name="fatigue_average">&#128528;</string>
    <string name="fatigue_unhappy">&#128577;</string>
    <string name="fatigue_terrible">&#128557;</string>
    <string name="front_enregistrer">Enregistrer</string>
    <string name="alarm_text">Rappel à 20h00</string>
    <string name="settings_add_alarm">Ajouter un rappel</string>

    <string-array name="available_activities">
        <item>Guitar</item>
        <item>Programming</item>
        <item>Gaming</item>
        <item>Browsing internet</item>
        <item>Singing</item>
        <item>School</item>
        <item>Rugby</item>
        <item>Cooking</item>
        <item>Cleaning</item>
    </string-array>

    <string-array name="available_feelings">
        <item>Happy</item>
        <item>Ecstatic</item>
        <item>Okay</item>
        <item>Unhappy</item>
        <item>Terrible</item>
        <item>Sad</item>
        <item>Angry</item>
        <item>Frustrated</item>
        <item>Energetic</item>
        <item>Motivated</item>
    </string-array>

    <string-array name="valid_filter_row_keys">
        <item>Aujourd\'hui</item>
        <item>Cette semaine</item>
        <item>Ce mois</item>
        <item>Le mois dernier</item>
        <item>Cette année</item>
        <item>Avant</item>
    </string-array>
</resources>


