<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/colorPrimaryBackground">


    <ImageButton
        android:id="@+id/bFeelingsAddNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/activities_add_new_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/colorPrimaryBackground"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="RedundantDescriptionCheck" />

    <TextView
        android:id="@+id/tvFeelingsWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/feelings_welcome"
        android:textColor="@color/colorOnPrimaryText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/line"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/top_divider"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@+id/delete"
        android:translationY="2dp" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/return_to_main"
        app:srcCompat="@drawable/ic_arrow_left"
        android:background="@color/colorPrimaryBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/tvSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activities_selected"
                android:textAlignment="center"
                android:textColor="@color/colorOnPrimaryText"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSelected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorRecycleBackground"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/tvAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activities_available"
                android:textAlignment="center"
                android:textColor="@color/colorOnPrimaryText"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAvailable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/colorRecycleBackground"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddNewActivity"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llConfirmDelete"
        app:layout_constraintBottom_toTopOf="@+id/bFeelingsAddNew">

        <EditText
            android:id="@+id/etFeelingsAddNewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:autofillHints="@string/activities_add_new_activity_name_hint"
            android:background="@drawable/activity_row_rounded_corner"
            android:ems="10"
            android:inputType="text"
            android:minWidth="100dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bActivityAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textAlignment="center" />

        <Button
            android:id="@+id/bActivityCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConfirmDelete"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/llAddNewActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/bFeelingsConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm_change" />

        <Button
            android:id="@+id/bFeelingsDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/feelings_enable_delete" />

        <Button
            android:id="@+id/bFeelingsRestoreDefaults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activities_restore_defaults" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>