<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:context=".TrendViewActivity">

    <TextView
        android:id="@+id/tv_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/trend_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/line"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/top_divider"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="parent"
        android:translationY="2dp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/getTheGraph"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#4E4E4E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxes" />

    <LinearLayout
        android:id="@+id/checkBoxes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getTheGraph"
        app:layout_constraintBottom_toTopOf="@+id/llTrendOptions">

        <CheckBox
            android:id="@+id/checkMood"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:autoSizeMaxTextSize="25sp"
            android:autoSizeTextType="uniform"
            android:text="@string/trend_check_mood"
            android:textColor="@color/white"/>

        <CheckBox
            android:id="@+id/checkFatigue"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:autoSizeMaxTextSize="25sp"
            android:autoSizeTextType="uniform"
            android:text="@string/trend_check_fatigue"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/checkMood"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/bViewData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/return_to_main"
        app:srcCompat="@drawable/ic_arrow_left"
        android:background="@color/colorMainBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llTrendOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxes">

        <ImageButton
            android:id="@+id/bTrendReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_loading"
            android:background="@color/colorMainBackground"
            android:text="@string/trend_reset" />

        <Button
            android:id="@+id/bTrendInitDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/default_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="to"
            android:textSize="20dp"
            android:textAlignment="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/bTrendEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/default_date" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>