<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/colorPrimaryBackground">

    <TextView
        android:id="@+id/tvNoteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/note_title"
        android:textColor="@color/colorOnPrimaryText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/line"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/top_divider"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@+id/bConfirm"
        android:translationY="2dp" />

    <ImageButton
        android:id="@+id/bConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/return_to_main"
        app:srcCompat="@drawable/ic_arrow_left"
        android:background="@color/colorPrimaryBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/Ritaline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">
        <TextView
            android:id="@+id/tvRitaline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ritaline :"
            android:textSize="19sp"
            android:textColor="@color/colorOnPrimaryText"/>
        <EditText
            android:id="@+id/etRitaline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:baselineAligned="false"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="1"
            android:gravity="top"
            android:inputType="text"
            android:textColor="@color/colorOnPrimaryText" />
    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/top_divider"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@+id/Ritaline"
        android:translationY="2dp" />

    <EditText
        android:id="@+id/etAddNote"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:baselineAligned="false"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:textColor="@color/colorOnPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintBottom_toTopOf="@+id/delete" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>